--- a/package.json
+++ b/package.json
@@ -5,13 +5,24 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "live": "livereload -w 700  ./vue-src"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bluebird": "^3.7.2",
     "core-js": "^3.6.5",
+    "idb": "^7.0.1",
+    "instagram-private-api": "^1.45.3",
+    "node-base64-image": "^2.0.4",
+    "playwright": "^1.21.1",
+    "re2": "^1.17.4",
+    "socks-proxy-agent": "^6.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuetify": "^2.6.0",
+    "vuex": "^3.4.0",
+    "vuex-pathify": "^1.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.11",
@@ -22,6 +33,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.8",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   }
 }
