--- a/package.json
+++ b/package.json
@@ -2,22 +2,22 @@
   "name": "unfollower",
   "version": "0.1.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
+    "express-api": "node express-api/index",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "live": "livereload -w 700  ./vue-src"
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "bluebird": "^3.7.2",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "idb": "^7.0.1",
     "instagram-private-api": "^1.45.3",
     "node-base64-image": "^2.0.4",
-    "playwright": "^1.21.1",
     "re2": "^1.17.4",
-    "socks-proxy-agent": "^6.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.0",
